fix: Prevent 'Logger must be set' error in CLI commands
Problem: DeferredLoggerInstance was not initialized in CLI context
(e.g., make:migration, doctrine:migrations:*), causing crashes.

Solution:
- Initialize DeferredLoggerInstance via DI container using factory
- Add InitializeDeferredLoggerPass compiler pass for early init
- Add isInitialized() method to check initialization state
- Guard all DeferredLogger calls with isInitialized() checks
- Update StartRequestSubscriber to use dependency injection
- Gracefully skip logging in CLI when logger not available

Benefits:
- ✅ CLI commands (make:migration, etc.) work without errors
- ✅ HTTP requests continue to work normally
- ✅ SQL logging gracefully disabled in CLI when not needed
- ✅ Messenger trace propagation skips CLI dispatches safely

Fixes: Logger must be set exception in console commands

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -4,6 +4,13 @@ services:
     autoconfigure: true
     public: false
 
+  # DeferredLoggerInstance - initialized early via compiler pass
+  Barry\DeferredLoggerBundle\Service\DeferredLoggerInstance:
+    factory: ['Barry\DeferredLoggerBundle\Service\DeferredLoggerInstance', 'getInstance']
+    arguments:
+      - '@logger'
+    public: false
+
   Barry\DeferredLoggerBundle\Service\DeferredLogger:
     public: true
 
