fix: Add ConsoleInitSubscriber to initialize logger in CLI
The previous fix registered the service but didn't ensure it was
instantiated before SQL queries. This adds a console event subscriber
that initializes DeferredLoggerInstance in its constructor, ensuring
it's ready before any console command runs.

This properly fixes: 'Logger must be set' in make:migration and other
CLI commands that use Doctrine.

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -28,6 +28,9 @@ services:
   Barry\DeferredLoggerBundle\EventSubscriber\StartRequestSubscriber:
     tags: [ "kernel.event_subscriber" ]
 
+  Barry\DeferredLoggerBundle\EventSubscriber\ConsoleInitSubscriber:
+    tags: [ "kernel.event_subscriber" ]
+
   # Doctrine DBAL Middleware for SQL logging (replaces deprecated SQLLogger)
   Barry\DeferredLoggerBundle\Middleware\SQLLoggingMiddleware:
     arguments:
